<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">蘑了个菇</string>
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    
    <string name="text_menu_fun">轻松一刻</string>
    <string name="text_menu_story">励志一刻</string>
    <string name="text_menu_haha">开心一刻</string>
    <string name="text_menu_test">趣味测试</string>
    <string name="text_menu_tu">美丽一刻</string>
    <string name="text_menu_about">蘑了个菇</string>
    <string name="text_menu_update">新版更新</string>
    <string name="text_menu_info1">欢迎访问蘑了个菇</string>
    <string name="text_menu_info2">www.molegegu.com</string>
    <string name="text_menu_info3">谢谢惠顾~</string>
    <string name="text_menu_noupdate">已是最新版本</string>
    
    
    <string name="text_about_update">检查新版本</string>
    <string name="text_about_feedback">意见与反馈</string>
    <string name="text_about_net">官方网站</string>
    <string name="text_about_about">关于</string>
    
    
    <string name="text_about_about_molegegu">官方网址  MOLEGEGU.COM</string>
    <string name="molegegu_about">蘑了个菇网，是一个分享原创趣事的网站。专注于分享每天最好玩、最轻松的趣
闻乐事，以及充满正能量的励志故事。该网站于2013年10月25日正式上线。口号
是“打造轻松一刻，导演快乐时光”，希望能给大家在忙碌的同时送上轻松一刻。</string>
    

</resources>